--- a/wetherAppVue3PiniaCompositionAPI/.prettierrc.json
+++ b/wetherAppVue3PiniaCompositionAPI/.prettierrc.json
@@ -1,1 +1,7 @@
-{}
+{
+  "quoteProps": "as-needed",
+  "singleQuote": true,
+  "printWidth": 100,
+  "trailingComma": "es5",
+  "bracketSpacing": true
+}
