--- a/wetherAppVue3PiniaCompositionAPI/package.json
+++ b/wetherAppVue3PiniaCompositionAPI/package.json
@@ -8,7 +8,11 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vueuse/core": "^9.2.0",
+    "axios": "^0.27.2",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.21",
+    "sass": "^1.54.9",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
@@ -16,7 +20,7 @@
     "@rushstack/eslint-patch": "^1.1.4",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/eslint-config-prettier": "^7.0.0",
-    "eslint": "^8.22.0",
+    "eslint": "8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "prettier": "^2.7.1",
     "vite": "^3.0.9"
