--- a/wetherAppVue3PiniaCompositionAPI/package.json
+++ b/wetherAppVue3PiniaCompositionAPI/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.21",
     "pinia": "^2.0.21",
     "sass": "^1.54.9",
+    "vanilla-tilt": "^1.7.2",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
