--- a/wetherAppVue3PiniaCompositionAPI/package.json
+++ b/wetherAppVue3PiniaCompositionAPI/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vueuse/core": "^9.2.0",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "lodash": "^4.17.21",
     "pinia": "^2.0.21",
     "sass": "^1.54.9",
