--- a/wetherAppVue3PiniaCompositionAPI/package.json
+++ b/wetherAppVue3PiniaCompositionAPI/package.json
@@ -9,14 +9,15 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.2.0",
+    "apexcharts": "^3.35.5",
     "axios": "^0.27.2",
-    "chart.js": "^3.9.1",
     "lodash": "^4.17.21",
     "pinia": "^2.0.21",
     "sass": "^1.54.9",
     "vanilla-tilt": "^1.7.2",
     "vue": "^3.2.38",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vue3-apexcharts": "^1.4.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
